--- a/package.json
+++ b/package.json
@@ -12,33 +12,44 @@
     "web:build": "./node_modules/.bin/webpack --config ./webpack.config.js --color --mode production"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.0",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/native": "^5.9.3",
-    "@react-navigation/stack": "^5.14.3",
-    "@reduxjs/toolkit": "^1.5.0",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^0.21.1",
+    "formik": "^2.4.2",
     "prop-types": "15.8.1",
     "react": "17.0.1",
     "react-dom": "^17.0.0",
     "react-native": "0.64.4",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-dotenv": "^2.5.3",
-    "react-native-elements": "^3.3.1",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.7.3",
     "react-native-radio-buttons-group": "^2.2.11",
     "react-native-reanimated": "~2.4.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^2.18.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "^3.22.1",
     "react-native-splash-screen": "3.3.0",
-    "react-native-vector-icons": "^8.1.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.2",
-    "react-redux": "^7.2.2",
-    "redux": "^4.0.5"
+    "react-redux": "^8.1.1",
+    "redux": "^4.2.1",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@tsconfig/react-native": "^3.0.2",
+    "@types/jest": "^29.5.3",
+    "@types/react": "^18.2.15",
+    "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.5",
     "babel-plugin-import-glob-meta": "github:crowdbotics/babel-plugin-import-glob-meta",
@@ -48,6 +59,7 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-test-renderer": "17.0.1",
+    "typescript": "^5.1.6",
     "url-loader": "^4.1.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
