--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "^3.22.1",
     "react-native-splash-screen": "3.3.0",
+    "react-native-svg": "^13.10.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.2",
     "react-redux": "^8.1.1",
